# claude_end-to-end-ML

./: README.md  STUDY.md
ml-classification-project/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ml-classification-project/docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
ml-classification-project/k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
ml-classification-project/models/: iris_classifier.joblib  model_only.joblib
ml-classification-project/src/: config.py  logger.py
ml-classification-project/src/api/: main.py
ml-classification-project/src/frontend/: app.py
ml-classification-project/src/ml/: eda.py  predict.py  train.py
ml-classification-project/tests/: test_api.py
